applications/external-services/templates/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zoneminder # Must be equal to Service name for automatic mapping
subsets:
- addresses:
  - ip: 10.10.10.16 # IP address of your external service that you would like to proxy requests to
  ports:
  - port: 80

---
apiVersion: v1
kind: Endpoints
metadata:
  name: movies # Must be equal to Service name for automatic mapping
subsets:
- addresses:
  - ip: 10.10.10.52 # IP address of your external service that you would like to proxy requests to
  ports:
  - port: 7878

---
apiVersion: v1
kind: Endpoints
metadata:
  name: tv # Must be equal to Service name for automatic mapping
subsets:
- addresses:
  - ip: 10.10.10.52 # IP address of your external service that you would like to proxy requests to
  ports:
  - port: 8989

---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex # Must be equal to Service name for automatic mapping
subsets:
- addresses:
  - ip: 192.168.1.122 # IP address of your external service that you would like to proxy requests to
  ports:
  - port: 32400
