applications/external-services/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zoneminder
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: movies
spec:
  ports:
    - port: 7878
      protocol: TCP
      targetPort: 7878
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: tv
spec:
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8989
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - port: 32400
      protocol: TCP
      targetPort: 32400
      name: http
